@@ -1,3 +1,8 @@
+2004-05-19  lav
+
+	* undo.h, undo.cc: (GroupHead) new class; save block positions there.
+	* kern.cc: clear undo when emptying text buffer.
+
 2004-05-18  lav
 
 	* chset.cc: display character in mb_mode properly - convert it to mb;
